--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
     "react-scripts": "3.0.1",
-    "react-use-clock-hook": "^1.0.6"
+    "react-use-clock-hook": "^1.0.6",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +36,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-loader": "^8.0.6",
+    "storybook": "^1.0.0",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9"
   }
 }
