--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-moment": "^0.9.2",
     "react-scripts": "3.0.1",
     "react-use-clock-hook": "^1.0.6",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "use-query-params": "^0.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
