--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@kennethormandy/react-fittext": "^0.6.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
@@ -41,12 +40,14 @@
     ]
   },
   "devDependencies": {
-    "babel-loader": "^8.0.6",
-    "storybook": "^1.0.0",
-    "@storybook/addon-knobs": "^5.1.9",
     "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9"
+    "@storybook/react": "^5.1.9",
+    "@testing-library/react-hooks": "^1.1.0",
+    "babel-loader": "^8.0.6",
+    "react-test-renderer": "^16.8.6",
+    "storybook": "^1.0.0"
   }
 }
