--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=12.4.0",
+    "npm": ">=6.9.2"
+},
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
