--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">=12.4.0",
     "npm": ">=6.9.2"
-},
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -16,7 +16,6 @@
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
     "react-scripts": "3.0.1",
-    "react-use-clock-hook": "^1.0.6",
     "styled-components": "^4.3.2",
     "use-query-params": "^0.3.3"
   },
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,14 +41,8 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
     "@testing-library/react-hooks": "^1.1.0",
-    "babel-loader": "^8.0.6",
-    "react-test-renderer": "^16.8.6",
-    "storybook": "^1.0.0"
-  }
+    "react-test-renderer": "^16.8.6"
+  },
+  "proxy": "http://ummahsoft.org"
 }
