--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://ummahsoft.org",
   "engines": {
     "node": ">=12.4.0",
     "npm": ">=6.9.2"
