--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "ordinal": "^1.0.3",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.8.6",
-    "react-moment": "^0.9.2",
-    "react-scripts": "3.0.1",
+    "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.11.0",
+    "react-moment": "^0.9.6",
+    "react-popout": "^1.0.2",
+    "react-scripts": "^3.0.1",
     "react-use-clock-hook": "^1.0.6",
-    "styled-components": "^4.3.2",
-    "use-query-params": "^0.3.3"
+    "serverless-cloudfront-invalidate": "^1.3.0",
+    "serverless-s3-sync": "^1.9.1",
+    "styled-components": "^4.4.1",
+    "use-query-params": "^0.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +31,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "predeploy": "npm run build",
+    "deploy": "aws s3 sync build/ s3://enoticeboardcom-staticsite-dashboard --acl public-read",
+    "postdeploy": "aws cloudfront create-invalidation  --distribution-id E3K89RKB1XH0EL --paths '/index.html'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,14 +52,14 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
+    "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/addons": "^5.2.6",
+    "@storybook/react": "^5.2.6",
     "@testing-library/react-hooks": "^1.1.0",
     "babel-loader": "^8.0.6",
-    "react-test-renderer": "^16.8.6",
-    "storybook": "^1.0.0"
+    "react-test-renderer": "^16.11.0",
+    "storybook": "^5.1.11"
   }
 }
